--- a/plugin/Cargo.toml
+++ b/plugin/Cargo.toml
@@ -1,16 +1,14 @@
 [package]
-name = "geyser-empty-plugin"
+name = "geyser-account-timestamp-tagging-plugin"
 version = "0.1.0"
 edition = "2021"
-authors = ["Godmode Galactus"]
+authors = ["Groovie Germanikus"]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [[bin]]
 name = "config-check"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 solana-sdk = { workspace = true }
