--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ codegen-units = 1
 [workspace.dependencies]
 solana-geyser-plugin-interface = "=1.17.28"
 solana-sdk = "=1.17.28"
+solana-logger = "=1.17.28"
 solana-streamer = "=1.17.28"
 solana-quic-client = "=1.17.28"
 solana-net-utils = "=1.17.28"
