Revert "build options"
This reverts commit 72233e5df573a2e6c74ab7ab10ec9707df85f7ce.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ members = [
     "plugin"
 ]
 
+[profile.release]
+debug = true
+lto = true
+codegen-units = 1
+
 [workspace.dependencies]
 solana-geyser-plugin-interface = "=1.18.22"
 solana-sdk = "=1.18.22"
